# ImpalaToGo

./: .gitignore  CMakeLists.txt  CNAME  README  README.md  apply-patches.sh  build_public.sh  buildall-fe-only.sh  buildall.sh  gcc-boost-build.patch  index.html  params.json
Management/: .gitignore  bower.json  package.json
Management/app/: index.html
Management/test/: karma.conf.js  units.html
be/: CMakeLists.txt
be/src/dfs_cache/: CMakeLists.txt  cache-definitions.hpp  cache-layer-registry.cc  cache-layer-registry.hpp  cache-mgr.cc  cache-mgr.hpp  cache-work-pool.hpp  common-include.hpp  dfs-adaptor-factory.cc  dfs-adaptor-factory.hpp  dfs-cache.cc  dfs-cache.h  dfs-connection.hpp  dfs-types.h  filesystem-descriptor-bound.cc  filesystem-descriptor-bound.hpp  filesystem-lru-cache.cc  filesystem-lru-cache.hpp  filesystem-mgr.cc  filesystem-mgr.hpp  gtest-fixtures.hpp  hadoop-fs-adaptive.c  hadoop-fs-adaptive.h  hadoop-fs-definitions.h  hadoopfs-adaptive.hpp  hadoopfs-definitions.hpp  interruptible-thread.hpp  lru-cache.hpp  lru-generator.hpp  managed-file.cc  managed-file.hpp  namenode-descriptor-bound.cc  namenode-descriptor-bound.hpp  request-scheduling-layer.hpp  sync-module.cc  sync-module.hpp  sync-with-utilities.hpp  synchronization-utils.hpp  task-scheduler.h  task.hpp  (+11 more)
be/src/dfs_cache/test/: CMakeLists.txt  gtest-fixtures.hpp  test-filesystem-mgr.cc
be/src/dfs_cache/test_data/: hello.txt
cmake_modules/: FindLlvm.cmake
common/function-registry/: impala_functions.py
common/thrift/: CMakeLists.txt  CatalogObjects.thrift  Descriptors.thrift  Frontend.thrift  ImpalaInternalService.thrift  ImpalaService.thrift  JniCatalog.thrift  PlanNodes.thrift  (+2 more)
deployment/: deploy.sh  deploy_scripts.sh  install.sh  package.sh
fe/: pom.xml
install/: READEM.md
management/: Gruntfile.js
shell/: impala_client.py  impala_shell.py
stylesheets/: stylesheet.css
tests/: conftest.py
www/: metric_group.tmpl  metrics.tmpl
(+565 files in other folders)
